--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ a:hover img {
 }
 
 .wrapper{
-  background: url("../img/bg.png") 50% 0 repeat;
+  background: url("https://nmayu.github.io/premium//bg.png") 50% 0 repeat;
   width: 100%;
   min-width: 1116px;
   padding-bottom: 80px;
@@ -331,7 +331,7 @@ a:hover img {
     font-size:1rem ;
   }
   body {
-    background: url("../img/sp/bg.png") 50% calc(520 / 750 * 100vw) repeat;
+    background: url("https://nmayu.github.io/premium/sp_bg.png") 50% calc(520 / 750 * 100vw) repeat;
   }
   img {
     width: 90%;
@@ -361,7 +361,7 @@ a:hover img {
     width: 100%;
     min-width: auto;
     padding-bottom: 40px;
-    background-color: url("../img/bg.png") 100%;
+    background-color: url("https://nmayu.github.io/premium//sp_bg.png") 100%;
   }
   .wrapper-in {
     background: none;
